Version 0.4 - ????-??-??

Version 0.3 - 2010-09-12
- Increase Python compatibility:
    * Remove dependence on Numpy.
    * Add Python 3 compatibility.
- Imlement the following sequences:
    * Cursor save/restore (DECSC, DECRC, CSI s, CSI u).
    * Scrolling region (DECSTBM).
    * Soft terminal reset (DECSTR).
- Add support for modes, and implement the following:
    * IRM (Insertion Replacement Mode)
    * LNM (Line Feed/New Line Mode)
    * DECAWM (Auto Wrap Mode)
    * reverse auto-wrap mode
    * xterm cursor save/restore
    * alternate screen buffer
- Remove needless verbosity for some unimplemented commands.
- Fix a few bugs.

Version 0.2.1 - 2010-08-14
- Fix a major bug that causes 0.2 to not work at all.

Version 0.2 - 2010-08-09
- Add HTML output format
- Implement the following sequences:
    * SGR (Set Graphics Attributes: bold, color, etc.)
    * ICH (Insert Character)
    * ED param 3 (Erase Saved Lines)
    * RIS (Reset)
- Add `rawcat' program
- Add testing framework and many tests
- Many bug fixes, including proper line wrapping / edge cases.

Version 0.1 - 2009-05-21
- Initial Release