@@ -8,7 +8,7 @@ vt100.py - Parse a typescript and output text.
 SYNOPSIS
 ========
 
-``vt100.py [-q|-v] [-f FORMAT] [--non-script] (filename|-)``
+``vt100.py [-q|-v] [-g WxH] [-f FORMAT] [--non-script] (filename|-)``
 
 
 DESCRIPTION
@@ -54,6 +54,7 @@ OPTIONS
 --man                       print manual page and exit
 --version                   print version number and exit
 -f FORMAT, --format=FORMAT  specify output format (see "Output Formats")
+-g WxH, --geometry=WxH      use W columns and H rows in output
 --non-script                do not ignore "Script (started|done) on" lines
 -q, --quiet                 decrease debugging verbosity
 -v, --verbose               increase debugging verbosity
